<resources>
    <string name="app_name">Averysync</string>
    <string name="img_desc">image</string>
    <string name="plan">Planning is Essential</string>
    <string name="plan_text_desc">"Expect the best, plan for the worst, and prepare to be surprised." ~ Denis Waitley </string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Create Account</string>
    <string name="profile_nav">Profile</string>
    <string name="log_out_nav">Log Out</string>
    <string name="enter_mobile">Enter Mobile No.</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">Profile</string>
    <string name="rlf_img">rlf_image</string>
    <string name="sign_up_desc_txt">To start project, create account …</string>
    <string name="log_in_desc_txt">To start project, log in to your account …</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="pls_wt_ext">Press again to close app</string>
    <string name="pls_wt">Please Wait&#8230;</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="reset_pwd_desc_txt">Reset password using registered email</string>
    <string name="new_brd_title">Create New Board</string>
    <string name="create">Create</string>
    <string name="brd_name">Board Name</string>
    <string name="no_brd_avl">Create a Board To show up here …</string>
    <string name="developed_by">Developed by: </string>
    <string name="crt_lst">Create List</string>
    <string name="crt_lst_act">Create List</string>
    <string name="crt_card_act">Create Card</string>
    <string name="lst_name_hint">Enter List Name</string>
    <string name="enter_lst_name">Enter List Name</string>
    <string name="enter_crd_name">Enter Card Name</string>
</resources>