<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ActivityRLF">

    <TextView
        android:id="@+id/rlf_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_rlf_tt"
        android:text="@string/app_name"
        android:textColor="@color/heading_txt_clr"
        android:textSize="@dimen/rlf_tts"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:elevation="12dp"
        android:id="@+id/view1"
        android:layout_marginTop="@dimen/rfl_margin_top_img"
        app:cardCornerRadius="12dp">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/imageView1"
            android:src="@drawable/manage_img"
            android:scaleType="centerCrop"
            android:contentDescription="@string/img_desc" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/plan_text_margin"
        android:text="@string/plan"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/plan_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rfl_margin_start_end"
        android:layout_marginTop="@dimen/plan_text_margin"
        android:layout_marginEnd="@dimen/rfl_margin_start_end"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/rfl_text_line_spc"
        android:text="@string/plan_text_desc"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/plan_text_desc_size" />

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginTop="@dimen/rlf_btn_margin_top"
        android:layout_marginEnd="@dimen/btn_margin"
        android:background="@drawable/customized_button"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding_top_btm"
        android:paddingBottom="@dimen/btn_padding_top_btm"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_txt_size"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:layout_marginEnd="@dimen/btn_margin"
        android:background="@drawable/customized_button"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding_top_btm"
        android:paddingBottom="@dimen/btn_padding_top_btm"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_txt_size"
        app:backgroundTint="@null"/>
    <Button
        android:id="@+id/reset_pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_margin"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:layout_marginEnd="@dimen/btn_margin"
        android:background="@drawable/customized_button"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding_top_btm"
        android:paddingBottom="@dimen/btn_padding_top_btm"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_txt_size"
        app:backgroundTint="@null"/>
</LinearLayout>