<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UsrProfile">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Averysync.OverlayAppBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/usr_prof_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_toolbar"
            app:popupTheme="@style/Theme.Averysync.OverlayPopUp" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardBackgroundColor="@color/off_white"
            android:layout_marginStart="@dimen/usr_profile_scr_margin_se"
            android:layout_marginEnd="@dimen/usr_profile_scr_margin_se"
            android:layout_marginTop="@dimen/usr_profile_scr_margin_tb"
            android:layout_marginBottom="@dimen/usr_profile_scr_margin_tb">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/usr_profile_scr_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/usr_prof_cir_img"
                    android:layout_width="@dimen/usr_profile_usr_img_sz"
                    android:layout_height="@dimen/usr_profile_usr_img_sz"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/profile_icon" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/usr_profile_nam_til_margin_t">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/usr_prof_nam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        android:textSize="@dimen/enter_txt_sz" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/usr_profile_email_margin_t">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/usr_prof_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/enter_txt_sz"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/usr_profile_mob_margin_t">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/usr_prof_mob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textSize="@dimen/enter_txt_sz"
                        android:hint="@string/enter_mobile" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/usr_prof_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/btn_padding_top_btm"
                    android:paddingBottom="@dimen/btn_padding_top_btm"
                    android:layout_gravity="center"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_txt_size"
                    android:layout_marginTop="@dimen/usr_profile_btn_margin_t"
                    android:background="@drawable/customized_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    app:backgroundTint="@null"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>