<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sign_up_img"
    tools:context=".activities.LogIn">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/log_in_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/log_in_head"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/slf_head_txt_sz"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top_spc"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/slf_margin"
            android:layout_marginEnd="@dimen/slf_margin"
            android:gravity="center"
            android:text="@string/log_in_desc_txt"
            android:textColor="@color/off_white"
            android:textSize="@dimen/slf_desc_txt_sz" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/slf_margin"
            android:layout_marginTop="@dimen/slf_card_view_margin_top"
            android:layout_marginEnd="@dimen/slf_margin"
            app:cardBackgroundColor="@color/off_white"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/til_margin"
                    android:layout_marginTop="@dimen/til_margin_top"
                    android:layout_marginEnd="@dimen/til_margin">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/email_et_log_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/enter_txt_sz" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/til_margin"
                    android:layout_marginTop="@dimen/til_margin_top"
                    android:layout_marginEnd="@dimen/til_margin">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/pwd_et_log_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/enter_txt_sz" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/log_in_act_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_margin"
                    android:layout_marginTop="@dimen/slf_screen_btn_margin_top"
                    android:layout_marginEnd="@dimen/btn_margin"
                    android:background="@drawable/customized_button"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_padding_top_btm"
                    android:paddingBottom="@dimen/btn_padding_top_btm"
                    android:text="@string/log_in"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_txt_size"
                    app:backgroundTint="@null" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>